--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
         <script>
         $(document).ready(function() {
             $.ajax({
-                url: "http://www.thomaseger.de/wordpress/wp-json/wp/v2/media?per_page=100"
+                url: "http://www.thomaseger.de/wordpress/wp-json/wp/v2/media?per_page=50"
             }).then(function(data) {
                 data.map(function (image) {
-                  var html = '<img class="gallery-thumb" src="'+image["source_url"]+'" />';
-                  $('#gallery').append(html);  
+                    if(image.alt_text === "Galerie Bild") {
+                      var html = '<img class="gallery-thumb" src="'+image.source_url+'" />';
+                      $('#gallery').append(html);  
+                    }
                 });
             });
         });
