--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
         <script src="https://code.jquery.com/jquery-2.x-git.min.js"></script>
         <script>
         $(document).ready(function() {
+            $('#gallery').append('<img id="loader" src="static-img/loader.gif"/>');
             $.ajax({
-                url: "http://www.thomaseger.de/wordpress/wp-json/wp/v2/media?per_page=50"
+                url: "http://www.thomaseger.de/wordpress/wp-json/wp/v2/media?per_page=100"
             }).then(function(data) {
                 data.map(function (image) {
                     if(image.alt_text === "Galerie Bild") {
-                      var html = '<img class="gallery-thumb" src="'+image.source_url+'" />';
+                      var html = '<img class="gallery-thumb" src="'+image.source_url+'" />';       
                       $('#gallery').append(html);  
                     }
                 });
+            }).done(function(){
+                $('#loader').remove();
             });
         });
         </script>
