Externalized gallery scripts

--- a/index.html
+++ b/index.html
@@ -5,35 +5,20 @@
         <link rel="stylesheet" href="static-css/index.css" />  
         <script src="https://code.jquery.com/jquery-2.x-git.min.js"></script>
 		<script src="static-js/structure.js"></script>
-        <script>
-        $(document).ready(function() {
-            $('body').append('<div id="loader">Lade Fotos ... </div>');
-            $.ajax({
-                url: "http://www.thomaseger.de/wordpress/wp-json/wp/v2/media?per_page=100"
-            }).then(function(data) {
-                data.map(function (image) {
-                    if(image.alt_text === "Galerie Bild") {
-                      var html = '<div class="gallery-thumb-wrapper"><img class="gallery-thumb shadow" src="'+image.source_url+'" /></div>';       
-                      $('#gallery').append(html);  
-                    }
-                });
-            }).done(function(){
-                $('#loader').remove();
-            });
-			
-			structure.header();
-
-        });
+		<script src="static-js/gallery.js"></script>
+     
+		<script>
+			$(document).ready(function() {
+				gallery.load();
+				structure.header();
+			});
         </script>
-
     </head>
     <body>
-        <div id="container">
-            <div id="header">
-            </div>
-            
-            <div id="gallery">
-            </div>
-        </div>
+		<div id="header">
+		</div>
+		
+		<div id="gallery">
+		</div>
     </body>
 </html>
